--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Quantum Corpus</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/src/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -79,7 +79,7 @@
       </div>
     </footer>
   </div>
-  <script src="main.js"></script>
+  <script src="/src/js/main.js"></script>
 
 </body>
 
