--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Quantum Corpus</title>
-  <link rel="stylesheet" href="/src/css/style.css">
+  <link rel="stylesheet" href="./src/css/style.css">
+  <script src="./src/js/main.js" defer></script>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
