--- a/index.html
+++ b/index.html
@@ -3,31 +3,25 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Quantum Corpus</title>
-  <link rel="stylesheet" href="./src/css/style.css">
-  <script src="./src/js/main.js" defer></script>
+  <title>Home — Corpus</title>
+  <link rel="stylesheet" href="./src/css/notes.css">
+  <link rel="stylesheet" href="./src/css/home.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
   <div class="wrapper">
     <div class="top-section">
       <div class="title">
-        Quantum Corpus
+        Home
         <span class="title-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
-            viewBox="0 0 100 100"><!-- Icon from Font-GIS by Jean-Marc Viglino - https://github.com/Viglino/font-gis/blob/main/LICENSE-CC-BY.md -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
+            <!-- Icon from Carbon by IBM - undefined -->
             <path fill="currentColor"
-              d="M28.135 33.154a3.5 3.5 0 0 0-2.668 1.235L.832 63.404c-1.93 2.275-.313 5.767 2.67 5.766l93-.065c2.981-.002 4.595-3.492 2.666-5.765l-20.291-23.9l-4.73 5.244L88.94 62.11l-77.873.053l18.686-22.01H45.71c.418-1.27.788-2.537.98-3.795a43 43 0 0 1 2.164-3.205zM89.91 74.11l-9.178.008l8.211 9.67l-77.875.053l8.22-9.682l-9.188.008L.832 85.08c-1.93 2.274-.313 5.767 2.67 5.766l93-.065c2.981-.002 4.595-3.492 2.666-5.765z"
-              color="currentColor" />
-            <path fill="currentColor"
-              d="M90.361.872a2.977 2.977 0 0 0-4.209 0l-34.81 34.81c-.29.29-.508.626-.653.985L45.934 53.29c-.218.687.117.98.858.753l16.541-4.732c.359-.145.695-.362.985-.653l34.81-34.81a2.977 2.977 0 0 0 0-4.21zm-7.576 11.786l4.557 4.557l-25.128 25.13l-4.558-4.559z"
-              color="currentColor" />
+              d="M20 14h8a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2h-8a2 2 0 0 0-2 2H9a2 2 0 0 0-2 2v4H4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2v-8a2 2 0 0 0-2-2h-8a2 2 0 0 0-2 2v6H8v-4h4a2 2 0 0 0 2-2v-8a2 2 0 0 0-2-2H9V6h9v6a2 2 0 0 0 2 2m0 14v-4h8v4Zm8-8v2h-8v-2ZM4 20v-4h8v4Zm8-6H4v-2h8Zm8-2V8h8v4Zm8-8v2h-8V4Z" />
           </svg>
         </span>
       </div>
-
       <div class="links">
         <a class="link-item" href="https://github.com/bedolpab/NeuralNotes">
           <div class="link-icon">
@@ -38,7 +32,6 @@
           </div>
           <div class="link-text">github/NeuralNotes</div>
         </a>
-
         <a class="link-item" href="https://github.com/bedolpab">
           <div class="link-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
@@ -48,7 +41,6 @@
           </div>
           <div class="link-text">github/bedolpab</div>
         </a>
-
         <a class="link-item" href="https://pablobedolla.com">
           <div class="link-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
@@ -59,13 +51,99 @@
           <div class="link-text">pablobedolla.com</div>
         </a>
       </div>
-
     </div>
-
     <div class="bottom-section">
-      <div class="notes-grid" id="notes-grid"></div>
-      <div class="preview-pane" id="preview-pane">
-        <p>Select a note to preview.</p>
+      <div class="terminal-grid">
+        <div class="terminal-box corpus-list">
+          <div class="terminal-box-title">Corpus List</div>
+          <ul class="terminal-list">
+            <li>
+              <a class="terminal-option" href="./src/pages/quantum.html">
+                <span class="link-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32">
+                    <path fill="currentColor"
+                      d="M26 30H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h20a2 2 0 0 1 2 2v24a2 2 0 0 1-2 2M6 4v24h20V4Z" />
+                    <path fill="currentColor" d="M22 15H10v-2h12zm-2 5h-8v-2h8z" />
+                  </svg>
+                </span>
+                Quantum Notes
+              </a>
+            </li>
+            <li>
+              <a class="terminal-option"
+                href="https://github.com/bedolpab/NeuralNotes/tree/main/quantum_corpus/quantum">
+                <span class="link-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="16" height="16">
+                    <path fill="currentColor"
+                      d="M20 10.25q0 3.351-1.908 6.027t-4.928 3.703q-.352.068-.514-.093a.54.54 0 0 1-.163-.4V16.67q0-1.295-.677-1.895a9 9 0 0 0 1.335-.24q.591-.16 1.223-.52a3.7 3.7 0 0 0 1.055-.888q.423-.528.69-1.402t.267-2.008q0-1.616-1.028-2.75q.48-1.214-.105-2.723q-.364-.12-1.054.147a7 7 0 0 0-1.198.587l-.495.32a9 9 0 0 0-2.5-.346a9 9 0 0 0-2.5.347a12 12 0 0 0-.553-.36q-.345-.214-1.088-.514q-.741-.3-1.12-.18q-.572 1.507-.09 2.722q-1.03 1.134-1.03 2.75q0 1.134.268 2.002q.267.867.683 1.401a3.5 3.5 0 0 0 1.048.894q.632.36 1.224.52q.593.162 1.335.241q-.52.48-.638 1.375a2.5 2.5 0 0 1-.586.2a3.6 3.6 0 0 1-.742.067q-.43 0-.853-.287q-.423-.288-.723-.834a2.1 2.1 0 0 0-.631-.694q-.384-.267-.645-.32l-.26-.04q-.273 0-.378.06t-.065.153a.7.7 0 0 0 .117.187a1 1 0 0 0 .17.16l.09.066q.287.135.567.508q.28.374.41.68l.13.307q.17.507.574.821q.404.315.872.4q.468.087.905.094q.436.006.723-.047l.299-.053q0 .507.007 1.188l.006.72q0 .24-.17.4q-.168.162-.52.094q-3.021-1.028-4.928-3.703Q0 13.6 0 10.25q0-2.79 1.341-5.145a10.1 10.1 0 0 1 3.64-3.73A9.6 9.6 0 0 1 10 0a9.6 9.6 0 0 1 5.02 1.375a10.1 10.1 0 0 1 3.639 3.73Q20 7.461 20 10.25" />
+                  </svg>
+                </span>
+                Quantum Module
+              </a>
+            </li>
+            <li>
+              <a class="terminal-option" href="./src/pages/cryptography.html">
+                <span class="link-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 32 32">
+                    <path fill="currentColor"
+                      d="M26 30H6a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h20a2 2 0 0 1 2 2v24a2 2 0 0 1-2 2M6 4v24h20V4Z" />
+                    <path fill="currentColor" d="M22 15H10v-2h12zm-2 5h-8v-2h8z" />
+                  </svg>
+                </span>
+                Cryptography Notes
+              </a>
+            </li>
+            <li>
+              <a class="terminal-option"
+                href="https://github.com/bedolpab/NeuralNotes/blob/main/cryptography_corpus/cryptography.ipynb">
+                <span class="link-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" width="16" height="16">
+                    <path fill="currentColor"
+                      d="M20 10.25q0 3.351-1.908 6.027t-4.928 3.703q-.352.068-.514-.093a.54.54 0 0 1-.163-.4V16.67q0-1.295-.677-1.895a9 9 0 0 0 1.335-.24q.591-.16 1.223-.52a3.7 3.7 0 0 0 1.055-.888q.423-.528.69-1.402t.267-2.008q0-1.616-1.028-2.75q.48-1.214-.105-2.723q-.364-.12-1.054.147a7 7 0 0 0-1.198.587l-.495.32a9 9 0 0 0-2.5-.346a9 9 0 0 0-2.5.347a12 12 0 0 0-.553-.36q-.345-.214-1.088-.514q-.741-.3-1.12-.18q-.572 1.507-.09 2.722q-1.03 1.134-1.03 2.75q0 1.134.268 2.002q.267.867.683 1.401a3.5 3.5 0 0 0 1.048.894q.632.36 1.224.52q.593.162 1.335.241q-.52.48-.638 1.375a2.5 2.5 0 0 1-.586.2a3.6 3.6 0 0 1-.742.067q-.43 0-.853-.287q-.423-.288-.723-.834a2.1 2.1 0 0 0-.631-.694q-.384-.267-.645-.32l-.26-.04q-.273 0-.378.06t-.065.153a.7.7 0 0 0 .117.187a1 1 0 0 0 .17.16l.09.066q.287.135.567.508q.28.374.41.68l.13.307q.17.507.574.821q.404.315.872.4q.468.087.905.094q.436.006.723-.047l.299-.053q0 .507.007 1.188l.006.72q0 .24-.17.4q-.168.162-.52.094q-3.021-1.028-4.928-3.703Q0 13.6 0 10.25q0-2.79 1.341-5.145a10.1 10.1 0 0 1 3.64-3.73A9.6 9.6 0 0 1 10 0a9.6 9.6 0 0 1 5.02 1.375a10.1 10.1 0 0 1 3.639 3.73Q20 7.461 20 10.25" />
+                  </svg>
+                </span>
+                Cryptography Notebook
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="terminal-box tree-structure">
+          <div class="terminal-box-title">Directory Structure</div>
+          <pre class="terminal-tree">
+    ./root
+    |
+    ├── cryptography_corpus
+    │   ├── cryptography
+    │   │   ├── __init__.py
+    │   │   └── crypto.py
+    │   ├── cryptography.ipynb
+    │   └── README.md
+    ├── index.html
+    ├── quantum_corpus
+    │   ├── quantum
+    │   │   ├── __init__.py
+    │   │   └── quantum.py
+    │   └── README.md
+    ├── README.md
+    └── src
+        ├── cnotes
+        ├── css
+        │   └── notes.css
+        ├── js
+        │   ├── cryptography.js
+        │   └── quantum.js
+        ├── pages
+        │   ├── cryptography.html
+        │   └── quantum.html
+        └── qnotes
+            ├── qq_note_0.png
+            ├── qq_note_1.png
+            ├── qq_note_2.png
+            ├── qq_note_3.png
+            ├── qq_note_4.png
+            └── qq_note_5.png
+          </pre>
+        </div>
       </div>
     </div>
     <footer class="footer">
@@ -80,7 +158,6 @@
       </div>
     </footer>
   </div>
-
 </body>
 
 </html>
