archive: repo moved

--- a/index.html
+++ b/index.html
@@ -50,8 +50,18 @@
                </a>
             </div>
          </div>
+         <div class="center-warning">
+   This website has been migrated to 
+   <span id="warning-text">
+   <a href="https://github.com/bedolpab/axisfour" target="_blank" rel="noopener noreferrer">
+   github/axis-four
+   </a>
+   </span>
+</div>
+
          <div class="bottom-section">
             <div class="terminal-grid">
+
                <div class="terminal-box corpus-list">
                   <div class="terminal-box-title">Corpus List</div>
                   <ul class="terminal-list">
