fix: changed axis-four link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
          <div class="center-warning">
    This website has been migrated to 
    <span id="warning-text">
-   <a href="https://github.com/bedolpab/axisfour" target="_blank" rel="noopener noreferrer">
+   <a href="https://egaborit1.github.io/axis-four/" target="_blank" rel="noopener noreferrer">
    github/axis-four
    </a>
    </span>
